--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "demo-api",
   "main": "index.js",
   "scripts": {
-    "json:server": "json-server --watch db.json"
+    "start": "json-server --watch db.json"
   },
   "author": "",
   "license": "ISC",
